--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.App{
+  font-family: Graphik, sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  border: 0;
+  border-bottom: 1px solid black;
+  width: 20vw;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button{
+  box-shadow: 0;
+  margin-right: 10px;
+  margin-top: 10px;
+  border: 0;
+  border-radius: 10px;
+  height: 30px;
+  font-size: 15px;
+  font-weight: bold;
+  width: 150px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: rgb(24,202,153);
 }
