--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,3 +1,7 @@
+:root{
+  --primary-color: rgb(3,4,94);
+}
+
 .App{
   font-family: Graphik, sans-serif;
   font-size: 20px;
@@ -21,7 +25,7 @@ button{
   font-weight: bold;
   width: 150px;
   color: white;
-  background-color: rgb(24,202,153);
+  background-color: var(--primary-color);;
 }
 
 .submit{
@@ -29,5 +33,8 @@ button{
   height: 60px;
   font-size: 28px;
   border-radius: 35px;
+}
 
+.btn-lite{
+  background-color:rgb(144,225,239);
 }
