--- a/src/Styles/Exam.css
+++ b/src/Styles/Exam.css
@@ -3,9 +3,15 @@
     flex-direction: row;
 }
 
+.exam-left{
+    width: 55%;
+}
+.exam-right{
+    width: 35%;
+}
+
 .exam-submit-flex{
     display: flex;
-    width: 35vw;
     align-items: center;
     flex-direction: column; 
     margin-top: 100px;
