--- a/src/Styles/ExamUpload.css
+++ b/src/Styles/ExamUpload.css
@@ -1,11 +1,58 @@
+.exam-upload{
+}
 .dottedBorder{
     border: 1.5px #666666 dashed;
-    margin-left: 10px;
-    height: 500px;
-    width: 350px;
-    max-width: 500px;
+    height: 600px;
+    width: 410px;
     color: black;
-    padding: 235px 50px 0 55px;
     text-align: center;
     position: relative
+}
+
+.exam-upload span{
+    opacity: 0.5;
+    z-index: 3;
+    position: relative;
+    font-weight: lighter; 
+    top: 47%;
+}
+.exam-upload img{
+    z-index: 6;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.exam-upload form{
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+}
+
+.exam-upload input{
+    opacity: 0.0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 7;
+}
+
+.ft-awesome{
+    opacity:0.2;
+    color: var(--primary-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100% !important;
+    height: 100% !important;
+    z-index: 2;
 }
