--- a/src/Styles/ExamUpload.css
+++ b/src/Styles/ExamUpload.css
@@ -9,6 +9,12 @@
     position: relative
 }
 
+.exam-upload canvas{
+    z-index: 12;
+    width: 100%;
+    height: 100%;
+}
+
 .exam-upload span{
     opacity: 0.5;
     z-index: 3;
