--- a/src/Styles/Comments.css
+++ b/src/Styles/Comments.css
@@ -10,23 +10,20 @@
 }
 
 #form-main{
-	width:100%;
+	width:50%;
 	float:left;
 	padding-top:0px;
 }
 
 #form-div {
 	background-color:rgb(3,4,94);
-	padding-left:5%;
-	padding-right:5%;
-	padding-top:3%;
-	padding-bottom:5%;
-	width: 70%;
+	padding: 17px;
+	width: 60%;
 	float: left;
 	left: 50%;
 	/* position: absolute; */
-  	margin-top:30px;
-	margin-left: 10%;
+  	margin-top: 5%;
+	margin-left: 20%;
 	-moz-border-radius: 7px;
 	-webkit-border-radius: 7px;
 }
@@ -40,8 +37,8 @@
 	border-radius: 0;
 	line-height: 22px;
 	background-color: #fbfbfb;
-	padding: 13px 13px 13px 5px;
-	margin-bottom: 10px;
+	padding: 8px 8px 8px 5px;
+	margin-bottom: 17px;
 	width:100%;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -56,7 +53,7 @@
 	border: 3px solid #3498db;
 	color: #3498db;
 	outline: none;
-  	padding: 13px 13px 13px 5px;
+  	/* padding: 13px 13px 13px 5px; */
 }
 
 .focused{
@@ -115,9 +112,9 @@ input:focus, textarea:focus {
 
 #button-blue{
 	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-	float:left;
-	width: 70%;
-	border: #fbfbfb solid 4px;
+	float:right;
+	width: 30%;
+	/* border: #fbfbfb solid 4px; */
 	cursor:pointer;
 	background-color: #2879af;
 	color:white;
@@ -127,7 +124,7 @@ input:focus, textarea:focus {
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
-  	margin-top:-4px;
+  	/* margin-top:-4px; */
   	font-weight:700;
 }
 
@@ -135,7 +132,7 @@ input:focus, textarea:focus {
 	background-color: #37a0e6;
 	/* color: #0493bd; */
 }
-	
+
 .submit:hover {
 	color: #3498db;
 }
