--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -45,5 +45,6 @@ button{
 }
 
 .btn-lite{
-  background-color:rgb(144,225,239);
+  /* background-color:rgb(144,225,239); */
+  background-color: rgb(3,4,94);
 }
