--- a/src/Styles/ExamUpload.css
+++ b/src/Styles/ExamUpload.css
@@ -1,9 +1,11 @@
 .exam-upload{
+    margin-top: 0px;
 }
+
 .dottedBorder{
-    border: 1.5px #666666 dashed;
-    height: 750px;
-    width: 500px;
+    /* border: 1.5px #666666 dashed; */
+    height: 1500px;
+    width: 1000px;
     color: black;
     text-align: center;
     position: relative
@@ -15,13 +17,25 @@
     height: 100%;
 }
 
+/* .dottedBorder input{
+    background: #00ffff;
+}
+
+#upload{
+    background-color: #00ffff;
+    color: #00ffff;
+} */
+
 .exam-upload span{
-    opacity: 0.5;
+    opacity: 1;
     z-index: 3;
     position: relative;
-    font-weight: lighter; 
-    top: 47%;
+    font-size: 25px;
+    /* font-weight: lighter;  */
+    top: 23%;
 }
+
+
 .exam-upload img{
     z-index: 6;
     position: absolute;
@@ -35,7 +49,7 @@
     display: flex; 
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
+    padding-top: 0px;
 }
 
 .exam-upload input{
@@ -51,14 +65,18 @@
 }
 
 .ft-awesome{
-    opacity:0.2;
-    color: var(--primary-color);
+    opacity:1;
+    color: #53fafa;
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     bottom: 0;
     right: 0;
     width: 100% !important;
-    height: 100% !important;
-    z-index: 2;
+    height: 40% !important;
+    /* z-index: 2; */
+}
+
+.ft-awesome:hover{
+    opacity: 0.5
 }
