--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+* {
+  font-family: 'Montserrat', cursive;
+}
+
 :root{
   --primary-color: rgb(3,4,94);
   --margin: 0px;
