--- a/src/Styles/ExamSample.css
+++ b/src/Styles/ExamSample.css
@@ -7,6 +7,7 @@ text-align: center;
     flex-direction: row;
     gap: 5%;
     justify-content: center;
+    margin-top: 10px;
 }
 
 .exam-sample-flex img{
