--- a/src/Styles/Loader.css
+++ b/src/Styles/Loader.css
@@ -10,10 +10,12 @@
   .load-wrapp {
     display: flex;
     flex-direction: row;
+    align-items: "center"; 
+    justify-content: "center";
+    /* text-align: 'center'; */
     color: rgb(131, 189, 129);
-    margin-top: 10%;
-    width: 35%;
-    height: 20%;
+    /* width: 35%; */
+    /* height: 20%; */
   }
   
   
