--- a/src/Styles/Exam.css
+++ b/src/Styles/Exam.css
@@ -8,21 +8,23 @@
 }
 .exam-right{
     width: 1000px;
-    background: #53fafa;
+    /* background: var(--third-color); */
+    /* background-image: linear-gradient(var(--third-color), var(--primary-color)); */
+    background: transparent;
 }
 
 .text-input{
-    background-color: #53fafa;
+    background-color: transparent;
     width: 300px;
     margin-top: 5px;
 }
 
 .text-input:hover{
-    background-color: #53fafa;
+    background-color: transparent;
 }
 
 .text-input:focus{
-    background-color: #53fafa;
+    background-color: transparent;
 }
 
 .exam-submit-flex{
