--- a/src/Styles/Exam.css
+++ b/src/Styles/Exam.css
@@ -9,14 +9,15 @@
 .exam-right{
     width: 1000px;
     /* background: var(--third-color); */
-    /* background-image: linear-gradient(var(--third-color), var(--primary-color)); */
-    background: transparent;
+    background-image: linear-gradient(var(--third-color), var(--primary-color));
+    /* background: transparent; */
 }
 
 .text-input{
     background-color: transparent;
     width: 300px;
     margin-top: 5px;
+    color: white;
 }
 
 .text-input:hover{
