--- a/src/Styles/ExamUpload.css
+++ b/src/Styles/ExamUpload.css
@@ -66,7 +66,7 @@
 
 .ft-awesome{
     opacity:1;
-    color: var(--third-color);
+    color: var(--second-color);
     /* color: linear-gradient(var(--fourth-color), var(--third-color)); */
     position: absolute;
     top: 50px;
@@ -75,6 +75,7 @@
     right: 0;
     width: 100% !important;
     height: 40% !important;
+    /* box-shadow: var(--shadow); */
     /* z-index: 2; */
 }
 
