--- a/src/Styles/ExamUpload.css
+++ b/src/Styles/ExamUpload.css
@@ -39,10 +39,11 @@
 .exam-upload img{
     z-index: 6;
     position: absolute;
-    bottom: 0;
+    top: 0;
     right: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
+    /* height: 100%; */
 }
 
 .exam-upload form{
